Fixing OAuth authorize on mobile.

--- a/media/css/payments.css
+++ b/media/css/payments.css
@@ -70,6 +70,9 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+.NB-statidc-form .controls input {
+    width: 180px;
+}
 .NB-static-form .NB-label-right {
     margin: 0 0 24px 206px;
     width: 200px;    
